--- a/css/main.css
+++ b/css/main.css
@@ -4,3 +4,140 @@ body {
   font-family: "Nanum Gothic", sans-serif;
   color: #111;
 }
+
+.btn {
+  font-size: 16px;
+  height: 46px;
+  width: 168px;
+  border: none;
+  border-radius: 46px;
+  cursor: pointer;
+  background-color: #fff;
+  color: #111;
+}
+
+.btn.dark {
+  background-color: #111;
+  color: #fff;
+}
+
+.btn_type2 {
+  padding: 12px 0;
+  border-bottom: 1px solid #111;
+  height: auto;
+  width: auto;
+  border-radius: unset;
+  margin-right: 42px;
+  background-color: transparent;
+}
+
+.center_box {
+  width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+  box-sizing: border-box;
+}
+
+.top {
+  display: flex;
+  align-items: center;
+}
+
+.logo {
+  font-size: 40px;
+  font-weight: 700;
+  margin-right: auto;
+}
+
+.nav {
+  display: flex;
+  align-items: center;
+}
+
+.nav li a {
+  display: inline-block;
+  height: 80px;
+  line-height: 80px;
+  text-align: center;
+  font-size: 14px;
+  margin: 0 30px;
+  position: relative;
+}
+
+.nav li a.on {
+  color: #eb5757;
+}
+
+.nav li a:hover {
+  color: #eb5757;
+}
+
+.nav li a::after {
+  position: absolute;
+  content: "";
+  width: 0;
+  height: 3px;
+  background-color: #eb5757;
+  bottom: 0;
+  left: 0;
+  transition: all 0.3s;
+}
+
+.nav li a:hover::after {
+  width: 100%;
+}
+
+.cart i {
+  font-size: 24px;
+  margin-left: 30px;
+  position: relative;
+}
+
+.cart i span {
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  width: 16px;
+  height: 16px;
+  background-color: #ff0000;
+  color: #fff;
+  border-radius: 16px;
+  font-size: 10px;
+  font-weight: 700;
+  text-align: center;
+  line-height: 16px;
+}
+
+.slide {
+  background-color: #f5f5f5;
+}
+
+.inner {
+  height: 500px;
+  background-image: url("/images/slide_bg.png");
+  background-repeat: no-repeat;
+  background-position: center right 30px;
+  position: relative;
+}
+
+.slide .slide_btns {
+  margin-left: 30px;
+}
+
+.slide .slide_text {
+  position: absolute;
+  top: 124px;
+  left: 20px;
+}
+
+.slide .slide_text h2 {
+  font-size: 60px;
+  font-weight: 700;
+  margin-bottom: 40px;
+  line-height: 1.3;
+}
+
+.slide .slide_text h2 b {
+  font-size: 70px;
+  font-weight: 800;
+}
